force-app/main/default/objects/Test_Step__c/Test_Step__c.object-meta.xml
<CustomObject>
    <label>Test Step</label>
    <nameField>
        <displayFormat>SP-TS-{0000}</displayFormat>
        <label>Test Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>