force-app/main/default/objects/Test_Step__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role</description>
    <label>Role</label>
    <length>15</length>
    <type>Text</type>
</CustomField>