force-app/main/default/objects/Test_Step__c/fields/TestCase__c.field-meta.xml
<CustomField>
    <fullName>TestCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestCase</label>
    <referenceTo>TestCase__c</referenceTo>
    <relationshipLabel>Test Steps</relationshipLabel>
    <relationshipName>Test_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>